<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome!</string>
    <string name="app_name">DateDate</string>
    <string name="login_info">Now supported only: gmail, googlemail, jabber</string>
    <string name="login_id_label">Account:</string>
    <string name="login_pwd_label">Password:</string>
    <string name="login_checkbox_label">Remember Account?</string>
    <string name="login_btn_label">Login</string>
</resources>
